--- a/pom.xml
+++ b/pom.xml
@@ -2,7 +2,7 @@
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
 
-    <groupId>image.processing</groupId>
+    <groupId>com.gebond.ip</groupId>
     <artifactId>ip-parent</artifactId>
     <version>1.0-SNAPSHOT</version>
     <packaging>pom</packaging>
@@ -13,6 +13,8 @@
         <module>ip-domain</module>
         <module>math-func</module>
         <module>math-common</module>
+        <module>ip-backend</module>
+        <module>ip-frontend</module>
     </modules>
 
     <properties>
