--- a/math-commons/pom.xml
+++ b/math-commons/pom.xml
@@ -9,7 +9,7 @@
     </parent>
     <modelVersion>4.0.0</modelVersion>
 
-    <artifactId>ip-frontend</artifactId>
+    <artifactId>math-commons</artifactId>
 
 
 </project>
