--- a/math-commons/pom.xml
+++ b/math-commons/pom.xml
@@ -11,5 +11,20 @@
 
     <artifactId>math-commons</artifactId>
 
+    <dependencies>
+        <!-- Common -->
+        <dependency>
+            <groupId>org.apache.commons</groupId>
+            <artifactId>commons-math3</artifactId>
+        </dependency>
+
+        <!-- Testing -->
+        <dependency>
+            <groupId>org.junit.jupiter</groupId>
+            <artifactId>junit-jupiter-api</artifactId>
+            <scope>compile</scope>
+        </dependency>
+    </dependencies>
+
 
 </project>
