--- a/math-func/pom.xml
+++ b/math-func/pom.xml
@@ -18,6 +18,12 @@
             <artifactId>math-commons</artifactId>
             <version>${project.version}</version>
         </dependency>
+
+        <!-- Testing -->
+        <dependency>
+            <groupId>org.junit.jupiter</groupId>
+            <artifactId>junit-jupiter-api</artifactId>
+        </dependency>
     </dependencies>
 
 </project>
