--- a/math-func/pom.xml
+++ b/math-func/pom.xml
@@ -18,6 +18,11 @@
             <artifactId>math-commons</artifactId>
             <version>${project.version}</version>
         </dependency>
+        <dependency>
+            <groupId>com.gebond.ip</groupId>
+            <artifactId>ip-model</artifactId>
+            <version>${project.version}</version>
+        </dependency>
 
         <!-- Testing -->
         <dependency>
