[Feature] Introduced JFrame mainView

--- a/ip-view/pom.xml
+++ b/ip-view/pom.xml
@@ -11,5 +11,12 @@
 
     <artifactId>ip-frontend</artifactId>
 
+    <dependencies>
+        <!-- Common -->
+        <dependency>
+            <groupId>commons-io</groupId>
+            <artifactId>commons-io</artifactId>
+        </dependency>
+    </dependencies>
 
 </project>
