--- a/pom.xml
+++ b/pom.xml
@@ -22,6 +22,7 @@
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
         <!-- Common -->
         <apache.common>3.6.1</apache.common>
+        <apache.commons-io>2.6</apache.commons-io>
         <!-- Testing -->
         <junit.jupiter.version>5.0.1</junit.jupiter.version>
         <jmockit.version>1.8</jmockit.version>
@@ -37,6 +38,11 @@
                 <groupId>org.apache.commons</groupId>
                 <artifactId>commons-math3</artifactId>
                 <version>${apache.common}</version>
+            </dependency>
+            <dependency>
+                <groupId>commons-io</groupId>
+                <artifactId>commons-io</artifactId>
+                <version>${apache.commons-io}</version>
             </dependency>
 
             <!--  Testing-->
