--- a/pom.xml
+++ b/pom.xml
@@ -45,7 +45,7 @@
                 <version>${apache.commons-io}</version>
             </dependency>
 
-            <!--  Testing-->
+            <!--  Testing -->
             <dependency>
                 <groupId>org.junit.jupiter</groupId>
                 <artifactId>junit-jupiter-api</artifactId>
@@ -57,6 +57,18 @@
                 <artifactId>jmockit</artifactId>
                 <version>${jmockit.version}</version>
                 <scope>test</scope>
+            </dependency>
+
+            <!-- UI -->
+            <dependency>
+                <groupId>com.intellij</groupId>
+                <artifactId>forms_rt</artifactId>
+                <version>5.0</version>
+            </dependency>
+            <dependency>
+                <groupId>org.apache.activemq</groupId>
+                <artifactId>activemq-core</artifactId>
+                <version>5.3.0</version>
             </dependency>
 
             <!-- Runtime -->
