--- a/ip-view/pom.xml
+++ b/ip-view/pom.xml
@@ -24,6 +24,12 @@
       <version>${project.version}</version>
     </dependency>
 
+    <!--<dependency>-->
+      <!--<groupId>com.intellij</groupId>-->
+      <!--<artifactId>forms_rt</artifactId>-->
+      <!--<version>5.0</version>-->
+    <!--</dependency>-->
+
     <!-- Common -->
     <dependency>
       <groupId>commons-io</groupId>
@@ -37,38 +43,37 @@
     </dependency>
 
     <!-- UI -->
-    <dependency>
-      <groupId>com.intellij</groupId>
-      <artifactId>forms_rt</artifactId>
-    </dependency>
-    <dependency>
-      <groupId>org.apache.activemq</groupId>
-      <artifactId>activemq-core</artifactId>
-    </dependency>
+    <!--<dependency>-->
+      <!--<groupId>com.intellij</groupId>-->
+      <!--<artifactId>forms_rt</artifactId>-->
+    <!--</dependency>-->
+    <!--<dependency>-->
+      <!--<groupId>org.apache.activemq</groupId>-->
+      <!--<artifactId>activemq-core</artifactId>-->
+    <!--</dependency>-->
   </dependencies>
 
   <build>
     <plugins>
-      <plugin>
-        <groupId>org.apache.maven.plugins</groupId>
-        <artifactId>maven-dependency-plugin</artifactId>
-        <executions>
-          <execution>
-            <id>copy-dependencies</id>
-            <phase>package</phase>
-            <goals>
-              <goal>copy-dependencies</goal>
-            </goals>
-            <configuration>
-              <outputDirectory>${project.build.directory}/lib</outputDirectory>
-              <overWriteReleases>false</overWriteReleases>
-              <overWriteSnapshots>false</overWriteSnapshots>
-              <overWriteIfNewer>true</overWriteIfNewer>
-            </configuration>
-          </execution>
-        </executions>
-      </plugin>
-
+      <!--<plugin>-->
+        <!--<groupId>org.apache.maven.plugins</groupId>-->
+        <!--<artifactId>maven-dependency-plugin</artifactId>-->
+        <!--<executions>-->
+          <!--<execution>-->
+            <!--<id>copy-dependencies</id>-->
+            <!--<phase>package</phase>-->
+            <!--<goals>-->
+              <!--<goal>copy-dependencies</goal>-->
+            <!--</goals>-->
+            <!--<configuration>-->
+              <!--<outputDirectory>${project.build.directory}/lib</outputDirectory>-->
+              <!--<overWriteReleases>false</overWriteReleases>-->
+              <!--<overWriteSnapshots>false</overWriteSnapshots>-->
+              <!--<overWriteIfNewer>true</overWriteIfNewer>-->
+            <!--</configuration>-->
+          <!--</execution>-->
+        <!--</executions>-->
+      <!--</plugin>-->
       <plugin>
         <groupId>org.apache.maven.plugins</groupId>
         <artifactId>maven-jar-plugin</artifactId>
